syntax = "proto3";

package protocol;

import "live_match.proto";
import "collections.proto";

message LiveMatches {
  repeated LiveMatch matches = 1;
}

message LiveMatchesChange {
  CollectionOp op = 1;
  LiveMatches change = 2;
}