syntax = "proto3";

package protocol;

option go_package = "github.com/13k/night-stalker/internal/protobuf/protocol";

import "protocol/match.proto";
import "protocol/team.proto";

message Player {
  uint32 account_id = 1;
  string name = 2;
  string persona_name = 3;
  string avatar_url = 4;
  string avatar_medium_url = 5;
  string avatar_full_url = 6;
  bool is_pro = 7;
  string slug = 8;

  protocol.Team team = 100;
}

message PlayerMatches {
  protocol.Player player = 100;
  repeated protocol.Match matches = 101;
  repeated protocol.Player known_players = 102;
}
